--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Catpicky's homepage
+description: Have you ever had a hard time choosing the right litter box for your cat?
