--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,6 @@
 theme: jekyll-theme-cayman
 title: Catpicky's homepage
 description: Have you ever had a hard time choosing the right litter box for your cat?
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Most Common Types Of Cat Litter Boxes And Recommendations - Catpicky</title>
-	<style> 
-		body { margin: 0; } .container { padding-bottom: 100px; background-color: #ffffff; max-width: 800px; padding: 0 10px; margin: 0 auto; margin-bottom: 150px; position: relative; } h1 { text-align: center; padding: 50px 0; color: #ffffff; font-size: 28px; background: #1b75ba; margin: 0; text-transform: capitalize; } h2 { color: #1b75ba; font-size: 24px; } a, a:hover { color: #1b75ba; } * {    font-family: Arial, Helvetica, sans-serif !important;} path.elementor-shape-fill { fill: #fff; } .tp-ft-top { background: #1b75ba; } .footer { background: #1b75ba; color: #fff; padding: 40px 0; text-align: center; }
-	</style>
-</head>
-<body>
 
 <h1>Most Common Types Of Cat Litter Boxes And Recommendations - Catpicky</h1>
 
@@ -36,24 +26,26 @@ E<p>Endclosed litter boxes are covered - this type is commonly known in two main
 
 <h2>Best Litter Boxes of Each Type</h2>
 
-<h3>#1: Petmate Booda Dome Clean Step Cat Litter Box 3 Colors - Litter Box for Multiple Cats</h3>
+<h3>Petmate Booda Dome Clean Step Cat Litter Box 3 Colors - Litter Box for Multiple Cats</h3>
 
-<p>One of the most frequent purchases of cat litter boxes is the enclosed dome/box type for big or multiple cats’ uses. Petmate - they know this need for big and roomy pet litter boxes of their customers. And we have this Petmate Booda Dome Cleanstep, a large 21 by 21 inches enclosed step-up multiple cat litter boxes! This type of litter boxes best suits owners with big cats, one or more, but don’t want to spend too much space placing those litter boxes. In the case of this Petmate, thanks to the closed dome, it can also provide your cat with extra privacy, and keep your room from stinking by the feline's odors! Petmate’s Pros:
+<p>One of the most frequent purchases of cat litter boxes is the enclosed dome/box type for big or multiple cats’ uses. Petmate - they know this need for big and roomy pet litter boxes of their customers. And we have this Petmate Booda Dome Cleanstep, a large 21 by 21 inches enclosed step-up multiple cat litter boxes! This type of litter boxes best suits owners with big cats, one or more, but don’t want to spend too much space placing those litter boxes. In the case of this Petmate, thanks to the closed dome, it can also provide your cat with extra privacy, and keep your room from stinking by the feline's odors!</p>
+<p>Petmate’s Pros:</p>
 Serve for multiple cats’ use</p>
 <ul>
 <li>Contain odors</li>
 <li>Keep your floor clean off litter dust</li>
 <li>Last for long</li>
 </ul>
-<h3>#2: Necoichi Pop-up Portable Cat Litter Box - Litter Box for Travel</h3>
+<h3>Necoichi Pop-up Portable Cat Litter Box - Litter Box for Travel</h3>
 
-<p>In Japanese, neko is the word for cat, and ichi means first, or number one. Combine them, and we have nekoichi, or necoichi, which means cats first! And that’s the story of Necoichi’s pet care company and their litter boxes products. For many years, they’ve introduced a lot of cats’ products that are foldable or portable, which makes it the best option for our trips with cats! The foldaway design is the best fit when it comes to travel litter boxes. They’re easy to pack around and take literally no time and no effort to clean! Many cats’ owners struggle to find time to take good care of their cats’ bathroom. That’s when foldable design becomes handy! It will save you a lot of time on the clean-up! Necoichi’s Pros:
-Super portable - lightweight and foldaway!</p>
+<p>In Japanese, neko is the word for cat, and ichi means first, or number one. Combine them, and we have nekoichi, or necoichi, which means cats first! And that’s the story of Necoichi’s pet care company and their litter boxes products. For many years, they’ve introduced a lot of cats’ products that are foldable or portable, which makes it the best option for our trips with cats! The foldaway design is the best fit when it comes to travel litter boxes. They’re easy to pack around and take literally no time and no effort to clean! Many cats’ owners struggle to find time to take good care of their cats’ bathroom. That’s when foldable design becomes handy! It will save you a lot of time on the clean-up!</p>
+<p>Necoichi’s Pros:</p>
 <ul>
+<li>Super portable - lightweight and foldaway!</p>
 <li>Easy to clean and wash</li>
 <li>An extra bathroom/emergency case</li>
 </ul>
-<h3>#3: IRIS Top Entry Cat Litter Box with Cat Litter Scoop - Best Top-Entry Litter Box</h3>
+<h3>IRIS Top Entry Cat Litter Box with Cat Litter Scoop - Best Top-Entry Litter Box</h3>
 
 <p>Any other choice for a tidy cat bathroom rather than an enclosed dome box? Well, you can always choose top-entry cat litter boxes! They do not only look so smart and compact but also provide cats and owners with a lot of benefits. First, as their name suggests, top-entry litter boxes have a unique design with their doors on top of the boxes. This results in cleaner areas around litter boxes since the cats already wipe their paws before jumping onto the floor! Also, because the door is on the upper side, litter, fresh or used, can not get out of the box. That’s why you can have as much litter inside as you want, which leads to minimum litter cleaning and replacing! Besides, this IRIS’s litter box has a super space-conservative built thanks to its vertical stand and mat-free design. This piece is not a self-cleaning cat litter box, but there is a litter scooper in the shipping pack for quick cleaning!</p> 
 
@@ -64,7 +56,7 @@ Super portable - lightweight and foldaway!</p>
 <li>Roomy for more litter in the box</li>
 <li>Space-saving design</li>
 </ul>
-<h3>#4: Nature’s Miracle Disposable Litter Box - Best Environmentally-friendly Litter Box</h3>
+<h3>Nature’s Miracle Disposable Litter Box - Best Environmentally-friendly Litter Box</h3>
 
 <p>Under which circumstance do you usually use a disposable litter box? For us, we often use it while traveling or when we are too busy to dispose of the used litter and clean the box. In this case, an environmentally-friendly disposable choice will leave us with a clean, sanitary litter box with no effort! However, our friends say that they prefer to use these as the padding inside their cats’ bathroom. For example, this Nature’s Miracle features baking soda in its ingredients to give us extra cover on smelly ammonia odors. The other ingredient of it is recycled paper, which made this piece super friendly to the Earth and also land-fill safe! </p>
 
@@ -74,7 +66,7 @@ Super portable - lightweight and foldaway!</p>
 <li>Highly environmentally-friendly</li>
 <li>Low-price</li>
 </ul>
-<h3>#5: Good Pet Stuff Plant Hidden Litter Box - Hidden Litter Box for Small Modern Room</h3>
+<h3>Good Pet Stuff Plant Hidden Litter Box - Hidden Litter Box for Small Modern Room</h3>
 
 <p>Today, life in big cities does not usually allow us with rooms large enough for our furniture, not to mention stuff for the kitties. This is when the pet care manufacturers come up with the idea of combining cats’ bathrooms with our basic choice of stuff to make hidden cat litter boxes! This litter box from Good Pet Stuff is disguised as a clay pot, pretty successful! The side that faces our living room looks exactly like a plant pot. Meanwhile, the side facing the wall or faces inside is the cat’s entry, which is both fashionable and confidential for your cat!</p> 
 
@@ -87,6 +79,3 @@ Super portable - lightweight and foldaway!</p>
 <h2>The Verdict</h2>
 
 <p>Take time, be patient to look for any signs from your cat that show whether she/he loves the current litter box or not! Since there are so many types of cat litter boxes out there, you can always have more than one around your house to see which will he choose. Good luck with your very first cat bathroom!</p>
-</div>
-</body>
-</html>
